--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 <body>
     <h1>Practical Page</h1>
+    <ul>
+        <li>one</li>
+        <li>two</li>
+        <li>three</li>
+    </ul>
 </body>
 
 </html>
